--- a/modal-architect.html
+++ b/modal-architect.html
@@ -455,7 +455,7 @@
         const posChip=document.createElement('span'); posChip.className='chip'; posChip.textContent='Pos: 0';
         const prevInv=btn('◀'), nextInv=btn('▶'), up=btn('▲'), down=btn('▼');
         ctrls.append(prevInv,invChip,nextInv,down,posChip,up);
-        card.appendChild(ctrlls);
+        card.appendChild(ctrls);
 
         const fb=document.createElement('div'); fb.className='fb'; card.appendChild(fb);
 
