--- a/index.html
+++ b/index.html
@@ -312,6 +312,27 @@ footer .byline em{font-style:italic;letter-spacing:.02em}
   </a>
 </li>
 
+<!-- POLYRHYTHM FORGE -->
+<li>
+  <a class="item" href="polyrhythm-forge.html">
+    <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round">
+      <!-- Anillos -->
+      <circle cx="12" cy="12" r="8.5" />
+      <circle cx="12" cy="12" r="5.5" />
+      <circle cx="12" cy="12" r="2.5" />
+      <!-- Playhead -->
+      <line x1="12" y1="12" x2="12" y2="3.5" />
+      <!-- Pasos (puntos) -->
+      <circle cx="12" cy="3.5" r="1.1" fill="currentColor" stroke="none"/>
+      <circle cx="19.5" cy="12" r="0.9" fill="currentColor" stroke="none"/>
+      <circle cx="12" cy="20.5" r="0.9" fill="currentColor" stroke="none"/>
+      <circle cx="4.5" cy="12" r="0.9" fill="currentColor" stroke="none"/>
+    </svg>
+    <span class="title">The Polyrhythm Forge</span>
+    <span class="meta">Concentric rings for polyrhythms & polymeters — Mesh-ish grooves, Euclidean accents, swing & pan.</span>
+  </a>
+</li>
+
       </ul>
     </nav>
 
