--- a/the-bounce-garden.html
+++ b/the-bounce-garden.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>The Bounce Garden — Re:sonance</title>
-  <meta name="description" content="Nodos que rebotan dentro de un círculo; cada colisión dispara su nota o un drum (kick/snare/hat). Con panorámica L/R por nodo y drones." />
+  <meta name="description" content="Nodes bouncing inside a circle; each collision triggers its note or a drum (kick/snare/hat). With L/R panning per node and drones." />
   <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>♪</text></svg>">
   <style>
     :root{
@@ -128,7 +128,7 @@
           <canvas id="canvas"></canvas>
         </div>
       </div>
-      <p class="tip">Tip: usa duraciones largas (≥4 s) para drones suaves. Clic en el círculo para añadir nodos rápido. Probá voces “kick/snare/hat” para texturas rítmicas.</p>
+      <p class="tip">Tip: use long durations (≥4 s) for smooth drones. Click on the circle to quickly add nodes. Try the “kick/snare/hat” voices for rhythmic textures.</p>
     </section>
 
     <!-- ======= PANEL DE SETUP (colapsable) ======= -->
