--- a/the-daily-chord.html
+++ b/the-daily-chord.html
@@ -69,6 +69,42 @@
     .tag{ border:1px solid var(--accent); border-radius:999px; padding:.2rem .55rem; font-size:.8rem; color:var(--muted); }
     .mood{ color:var(--muted); font-size:.95rem; margin-top:.2rem; }
 
+    /* ---- Inline support note (in-flow) ---- */
+    .support-note{
+      display:none; /* visible via JS si corresponde */
+      border:1px solid var(--accent);
+      border-radius:.6rem;
+      padding:.8rem .9rem;
+      margin-top:12px;
+      font-size:.95rem;
+      background: color-mix(in oklab, var(--paper) 88%, var(--accent) 12%);
+      color: var(--ink);
+    }
+    html.theme-dark .support-note{
+      background: color-mix(in oklab, var(--ink) 70%, var(--accent) 30%);
+      color: var(--paper);
+    }
+    .support-note .actions{
+      display:flex; gap:.5rem; flex-wrap:wrap; align-items:center; margin-top:.45rem;
+    }
+    .support-note .btn{
+      display:inline-flex; align-items:center; gap:.45rem; text-decoration:none;
+      border:1px solid var(--accent); border-radius:999px; padding:.4rem .85rem; font-weight:600;
+      transition:transform .08s ease, background-color .2s ease, color .2s ease;
+    }
+    .support-note .btn:active{ transform:scale(.98); }
+    .support-note .btn svg{ width:1.05rem; height:1.05rem; stroke:currentColor; }
+    html:not(.theme-dark) .support-note .btn{
+      background: color-mix(in oklab, var(--paper) 85%, var(--accent) 15%); color: var(--ink);
+    }
+    html.theme-dark .support-note .btn{
+      background: color-mix(in oklab, var(--ink) 55%, var(--accent) 45%); color: var(--paper);
+    }
+    .support-note .dismiss{
+      appearance:none; background:none; border:none; padding:.25rem .4rem; cursor:pointer;
+      color:inherit; opacity:.75; text-decoration:underline; text-underline-offset:2px; font-size:.9rem;
+    }
+
     .fretcard{ border:1px solid var(--accent); border-radius:.6rem; padding:.9rem; background:transparent; margin-top:12px; }
     #fretboard{ overflow:auto; text-align:center; }
     .fret svg{ max-width:100%; height:auto; display:block; }
@@ -178,6 +214,25 @@
       <p class="mood" id="moodLine">—</p>
     </section>
 
+    <!-- Inline Support Note (flujo natural de lectura) -->
+    <section class="support-note" id="supportInline" aria-label="Support this project">
+      <p style="margin:0">
+        Did this chord spark something? If you want to keep <strong>Re:sonance</strong> brewing,
+        you can <a href="https://buymeacoffee.com/Contumance" target="_blank" rel="noopener noreferrer">buy me a coffee</a>.
+        It helps me carve time to build the next tools. Thank you ✨
+      </p>
+      <div class="actions">
+        <a class="btn" href="https://buymeacoffee.com/Contumance" target="_blank" rel="noopener noreferrer" aria-label="Buy me a coffee">
+          <svg viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M4 8h14.5a2 2 0 0 1 0 4H18l-1 5a4 4 0 0 1-3.95 3.3H8.95A4 4 0 0 1 5 17l-1-9z"/>
+            <path d="M3 8h17"/><path d="M7 4h6"/>
+          </svg>
+          <span>Buy me a coffee</span>
+        </a>
+        <button class="dismiss" type="button" id="dismissSupport">Not now</button>
+      </div>
+    </section>
+
     <section class="fretcard" aria-label="Fretboard for this chord">
       <div class="kicker">Fretboard</div>
       <div id="fretboard"></div>
@@ -254,16 +309,14 @@
     }
 
     /* ========= Etiquetas universales ========= */
-    // Nombre/emoji de fase lunar (8 fases)
     function moonPhaseName(frac){
       const names = [
         '🌑 New', '🌒 Waxing crescent', '🌓 First quarter', '🌔 Waxing gibbous',
         '🌕 Full', '🌖 Waning gibbous', '🌗 Last quarter', '🌘 Waning crescent'
       ];
-      const idx = Math.floor(((frac + 1/16) % 1) * 8); // centra los tramos
+      const idx = Math.floor(((frac + 1/16) % 1) * 8);
       return names[idx];
     }
-    // Signo zodiacal (tropical) por fecha calendario
     function zodiacForDate(d){
       const m = d.getMonth()+1, day = d.getDate();
       const md = m*100 + day;
@@ -280,7 +333,7 @@
       for(let i=0;i<table.length-1;i++){
         const cur = table[i], next = table[i+1];
         const inRange = (md >= cur.start && md < next.start) ||
-                        (cur.start>next.start && (md >= cur.start || md < next.start)); // cruce de año
+                        (cur.start>next.start && (md >= cur.start || md < next.start));
         if(inRange){ pick = cur; break; }
       }
       return pick;
@@ -292,7 +345,7 @@
       for(let i=0;i<str.length;i++){
         h ^= str.charCodeAt(i);
         h = Math.imul(h, 16777619);
-        h ^= h >>> 13; h = (h ^ (h << 7)) >>> 0;
+        h ^= h >>> 13; h = (h ^ h << 7) >>> 0;
       }
       h ^= h >>> 16; h = Math.imul(h, 2246822507);
       h ^= h >>> 13; h = Math.imul(h, 3266489909);
@@ -360,7 +413,7 @@
       if(!_ac){
         _ac = new (window.AudioContext || window.webkitAudioContext)();
         _master = _ac.createGain();
-        _master.gain.value = 0.2; // nivel razonable por defecto
+        _master.gain.value = 0.2;
         _master.connect(_ac.destination);
       }
       if(_ac.state === 'suspended') _ac.resume();
@@ -370,11 +423,10 @@
     function pcName(m){ return PC_TO_NAME[(m%12+12)%12]; }
     function octaveNum(m){ return Math.floor(m/12) - 1; }
 
-    // Sintesito por nota: triangle + mini-ADSR
     function playNote(midi, opts={}){
       const ac = getAC();
       const t0 = ac.currentTime;
-      const dur = opts.duration ?? 0.6;      // s
+      const dur = opts.duration ?? 0.6;
       const vel = Math.max(0, Math.min(1, opts.velocity ?? 0.9));
       const a = 0.005, d = 0.06, s = 0.7, r = 0.15;
 
@@ -383,7 +435,6 @@
       osc.type = 'triangle';
       osc.frequency.value = midiToFreq(midi);
 
-      // Envolvente
       g.gain.setValueAtTime(0, t0);
       g.gain.linearRampToValueAtTime(vel, t0 + a);
       g.gain.linearRampToValueAtTime(vel*s, t0 + a + d);
@@ -396,7 +447,6 @@
       osc.stop(tend + r + 0.02);
     }
 
-    // Asignación accesible (click/teclado) a cada círculo
     function bindNoteInteractivity(){
       const circles = document.querySelectorAll('#fretboard .fb-note circle');
       circles.forEach(c=>{
@@ -462,8 +512,8 @@
     function renderFretboard(rootName, qualityKey, seedMix){
       const pcRoot = NOTE_PC[rootName] || 0;
       const intervals = QUALITIES[qualityKey].intervals;
-      const start = 2 + Math.floor(seedMix * 13);    // 2..14
-      const inversionBias = (seedMix * 1.618) % 1;   // sesgo estable
+      const start = 2 + Math.floor(seedMix * 13);
+      const inversionBias = (seedMix * 1.618) % 1;
       const voicing = pickVoicing(pcRoot, intervals, start, inversionBias);
 
       const frets = 5, startFret = start, strings = 6, w = frets*44 + 100, h = strings*26 + 70;
@@ -567,11 +617,10 @@
       dateLabel.textContent = formatDateLong(d0);
       chordText.textContent = symbol;
 
-      // Etiquetas universales (sin hemisferio)
       const z = zodiacForDate(d0);
       const moonFrac = moonPhaseDateOnly(d0);
       const moonLabel = moonPhaseName(moonFrac);
-      const quarter = 'Q' + (Math.floor(d0.getMonth()/3)+1); // Q1..Q4
+      const quarter = 'Q' + (Math.floor(d0.getMonth()/3)+1);
 
       const famLabel = qualKey.replace('sixNine','6/9').replace('six','6');
       tagsRender([
@@ -609,7 +658,7 @@
       const v = inputDate.value;
       if(!v){ alert('Pick a date.'); return; }
       const parts = v.split('-').map(Number);
-      const d = new Date(parts[0], parts[1]-1, parts[2]); // fecha local sin hora
+      const d = new Date(parts[0], parts[1]-1, parts[2]);
       computeForDate(d);
     });
     document.getElementById('btnShare').addEventListener('click', () => {
@@ -623,6 +672,23 @@
           .catch(() => { alert(text); });
       }
     });
+
+    // Inline support note show/hide (14 días)
+    (function supportInlineLogic(){
+      const el = document.getElementById('supportInline');
+      const btn = document.getElementById('dismissSupport');
+      if(!el || !btn) return;
+      const KEY = 'support-note:v1:dismissedUntil';
+      const now = Date.now();
+      const until = Number(localStorage.getItem(KEY) || 0);
+      if (now < until) { el.style.display = 'none'; return; }
+      el.style.display = 'block';
+      btn.addEventListener('click', ()=>{
+        const fourteenDays = 14*24*60*60*1000;
+        localStorage.setItem(KEY, String(Date.now() + fourteenDays));
+        el.style.display = 'none';
+      });
+    })();
 
     // Init
     (function init(){
